--- a/style.css
+++ b/style.css
@@ -33,8 +33,24 @@
 #banner {
     height: 20rem;
     background-color: #FF6969;
+    background-image: url(/img/banner-img-small.jpg);
+    background-size:cover;
 }
 
 /* Gallery */
+.gallery-title {
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.container {
+    display: flex;
+    width: 80%;
+    margin: auto;
+    column-gap: 1rem;
+    justify-content: center;
+}
 
 /* Footer */
