--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 #banner {
     height: 20rem;
     background-color: #FF6969;
-    background-image: url(/img/banner-img-small.jpg);
+    background-image: url("https://source.unsplash.com/2560x1080?independence");
     background-size:cover;
 }
 
@@ -51,6 +51,21 @@
     margin: auto;
     column-gap: 1rem;
     justify-content: center;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 20rem;
+    background-size: cover;
+    background-color: #FF6969;
+}
+
+.card-img {
+    margin: auto;
+    margin-top: 0.5rem;
+    width: 100%;
+    height: 100%;
 }
 
 /* Footer */
