--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: #FFF5E0;
+    background-color: #FFBB5C;
     color: #141E46;
     font-family: sans-serif;
 }
@@ -9,7 +9,7 @@
 /* Navbar */
 #navbar {
     height: 2.5rem;
-    background-color: #BB2525;
+    background-color: #C63D2F;
     color: white;
     
 }
@@ -18,14 +18,14 @@
     display: flex;
     justify-content: center;
     align-self:center;
-    background-color: #BB2525;
+    background-color: #C63D2F;
     column-gap: 1rem;
     padding-top: 0.5rem;
 }
 
 #navbar ul a {
     color: white;
-    background-color: #BB2525;
+    background-color: #C63D2F;
     text-decoration: none;
 }
 
@@ -59,13 +59,44 @@
     width: 20rem;
     background-size: cover;
     background-color: #FF6969;
+    padding: 0.3rem;
+    border-radius: 10px;
+    margin-bottom: 2rem;
 }
 
 .card-img {
-    margin: auto;
-    margin-top: 0.5rem;
     width: 100%;
-    height: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.card-img img {
+    width: 100%;
+    background-size: cover;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.card-content {
+    padding: 1rem;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+h3 {
+    margin-bottom: 1rem;
+}
+
+.card-content p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
+p > span {
+    font-weight: bold;
 }
 
 /* Footer */
