--- a/style.css
+++ b/style.css
@@ -58,21 +58,28 @@
     flex-direction: column;
     width: 20rem;
     background-size: cover;
-    background-color: #FF6969;
     padding: 0.3rem;
     border-radius: 10px;
     margin-bottom: 2rem;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    background-color: white;
+}
+
+.card:hover {
+    transform: scale(1.01);
 }
 
 .card-img {
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    background-color: white;
 }
 
 .card-img img {
     width: 100%;
-    background-size: cover;
+    max-height: 16rem;
+    object-fit: cover;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -81,10 +88,12 @@
     padding: 1rem;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    background-color: white;
 }
 
 h3 {
     margin-bottom: 1rem;
+    background-color: white;
 }
 
 .card-content p {
@@ -93,10 +102,12 @@ h3 {
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
+    background-color: white;
 }
 
 p > span {
     font-weight: bold;
+    background-color: white;
 }
 
 /* Footer */
