--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: #e9e3da;
-    color: #141E46;
     font-family: 'Montserrat', sans-serif;
     scroll-behavior: smooth;
+}
+
+html {
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvIj0qfg1t9SiuCmv-bmlmNNjBqK5ynHoMjW5bhxzVfg&s");
+}
+
+body {
+    background-color: #e9e3da;
+    color: #141E46;
 }
 
 /* Navbar */
@@ -12,13 +19,15 @@
     height: 2.5rem;
     background-color: #C63D2F;
     color: white;
-    
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
 }
 
 #navbar ul {
     display: flex;
     justify-content: center;
-    
     background-color: #C63D2F;
     column-gap: 1rem;
     padding-top: 0.5rem;
@@ -40,12 +49,17 @@
 }
 
 /* Gallery */
+#gallery {
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvIj0qfg1t9SiuCmv-bmlmNNjBqK5ynHoMjW5bhxzVfg&s");
+}
+
 .gallery-title {
     font-size: 3rem;
     text-align: center;
-    margin-top: 1.5rem;
-    margin-bottom: 2rem;
+    padding-top: 1.5rem;
+    padding-bottom: 2rem;
     color: rgb(216, 14, 14);
+    background: rgba(0, 0, 0, 0);
 }
 
 .container {
@@ -54,6 +68,7 @@
     margin: auto;
     column-gap: 1rem;
     justify-content: center;
+    background: rgba(0, 0, 0, 0);
 }
 
 .card {
@@ -66,6 +81,7 @@
     margin-bottom: 2rem;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     background-color: white;
+    cursor: pointer;
 }
 
 .card:hover {
@@ -115,3 +131,80 @@ p > span {
 }
 
 /* Footer */
+
+
+/* DETAIL PAGE */
+#detail {
+    display: flex;
+    flex-direction: column;
+    max-width: 50rem;
+    margin: auto;
+    padding: 3rem;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 5rem;
+}
+
+.top-content {
+    display: flex;
+    align-items: center;
+}
+
+.top-content img {
+    width: 20rem;
+    height: 20rem;
+    object-fit: cover;
+    object-position: center top;
+    border-radius: 10px;
+}
+
+.top-content-info {
+    margin-left: 2rem;
+}
+
+.top-content-info h2 {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+.top-content-info p {
+    margin-bottom: 1rem;
+}
+
+.top-content-info span {
+    font-weight: bold;
+}
+
+.bottom-content h3 {
+    margin-top: 1rem;
+}
+
+.bottom-content p {
+    text-align: justify;
+}
+
+.button-set {
+    display: inline-block;
+    width: 20rem;
+    margin: auto;
+}
+
+.button-set button {
+    padding: 1rem;
+    border-radius: 10px;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    margin: auto;
+    margin-top: 1rem;
+    margin-right: 1rem;
+    cursor: pointer;
+}
+
+.update {
+    background-color: green;
+}
+
+.delete {
+    background-color: red;
+}
